--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,43 @@
-name: build and deploy rust-compressor to ghcr
+name: Docker Build and Push
 
 on:
   push:
-    branches:
-      - master
-  
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04
+  build-and-push:
+    runs-on: ubuntu-latest
     permissions:
+      contents: read
       packages: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: login to container registry
+      - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
-            registry: ghcr.io
-            username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Build project
-      #   uses: docker/build-push-action@v4
-      #   with:
-      #     context: .
-      #     push: true
-      #     tags: |
-      #       ghcr.io/${{ vars.REPOSITORY }}:latest
-      #       ghcr.io/${{ vars.REPOSITORY }}:${{ github.run_number }}
-            
-         # Step : Build the Docker image
-      - name: Build Docker image
-        run: |
-         docker build -t ghcr.io/${{ vars.REPOSITORY }}/some_static_site .
-   
-         # Step 4: Slim the Docker image using Kitabisa Action
-      - name: Slim Docker image
-        uses: kitabisa/docker-slim-action@v1
-        env:
-         DSLIM_HTTP_PROBE: "false"  # Disables HTTP probing during slimming
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v4
         with:
-         target: ghcr.io/${{ vars.REPOSITORY }}/some_static_site 
-           # Suffix for the slimmed image tag
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-    # Step 5: Push the slimmed image to GitHub Container Registry.
-      - name: Push slimmed Docker image
-        run: |
-         docker push ghcr.io/${{ vars.REPOSITORY }}/some_static_site  
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
