--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,18 @@
-name: Docker Build and Push
+name: Build and Push Docker Images
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "master" ]
+    tags: [ "v*.*.*" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "master" ]
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_PREFIX: ${{ github.repository }}
 
 jobs:
-  build-and-push:
+  build-rust:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -19,25 +20,91 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to GHCR
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v4
+        id: meta-rust
+        uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/rust-app
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=sha,prefix=rust-
+          flavor: |
+            latest=false
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Rust image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          file: Dockerfile.rust
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-rust.outputs.tags }}
+          labels: ${{ steps.meta-rust.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-js:
+    runs-on: ubuntu-latest
+    needs: build-rust
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta-js
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/js-app
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=sha,prefix=js-
+          flavor: |
+            latest=false
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push JS image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.js
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-js.outputs.tags }}
+          labels: ${{ steps.meta-js.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
