--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/rust-app
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/rust-compressor
           tags: |
             type=ref,event=tag
             type=ref,event=branch
