--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,58 @@
-/rust-compressor/target
-/js-compressor/node_modules
+# Rust build artifacts
+/target/
+**/*.rs.bk
+Cargo.lock
+rs-compressor/target/
+rs-compressor/pkg/
+
+# Node.js dependencies and build artifacts
+js-compressor/node_modules/
+js-compressor/package-lock.json
+js-compressor/pkg/
+js-compressor/*.compressed
+js-compressor/*.decompressed
+js-compressor/compressed.png
+js-compressor/decompressed.png
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test coverage
+coverage/
+*.lcov
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+
+# Test output files
+*.compressed
+*.decompressed
+*.png
+*.jpg
+*.jpeg
+*.gif
