--- a/js-compressor/.dockerignore
+++ b/js-compressor/.dockerignore
@@ -1,7 +1,44 @@
-node_modules
-*.log
-Dockerfile
-.dockerignore
+# Git
 .git
-tests
-README.md
+.gitignore
+
+# Node.js
+node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+
+# Build artifacts
+pkg/
+*.compressed
+*.decompressed
+
+# Test files
+test/
+coverage/
+
+# Documentation
+docs/
+*.md
+!README.md
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
